added html for bar, button, and filler

--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,17 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>13-netflix-result</title>
+  <title>Netflix Results</title>
   <link rel="stylesheet" href="/app.css">
 </head>
 <body>
+  <button class="planet-submit">Search</button>
+
+  <div class="results">
+    <div class="results-item">
+      <p class="results-item__name">filler result</p>
+    </div>
+  </div>
   <script src="/app.js" charset="utf-8"></script>
 </body>
 </html>
