stylized bar and button

--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,17 @@
   <link rel="stylesheet" href="/app.css">
 </head>
 <body>
-  <button class="planet-submit">Search</button>
 
-  <div class="results">
-    <div class="results-item">
-      <p class="results-item__name">filler result</p>
+  <div class="section">
+    <div class="planet">
+      <input type="text" class="planet__name">
+      <button class="planet__submit">Search</button>
+    </div>
+
+    <div class="results">
+      <div class="result-item">
+        <p class="result-item__name">filler result</p>
+      </div>
     </div>
   </div>
   <script src="/app.js" charset="utf-8"></script>
