--- a/public/index.html
+++ b/public/index.html
@@ -4,18 +4,32 @@
   <meta charset="utf-8">
   <title>Netflix Results</title>
   <link rel="stylesheet" href="/app.css">
+  <script src="https://use.fontawesome.com/f76523254e.js"></script>
 </head>
 <body>
 
   <div class="section">
     <div class="planet">
-      <input type="text" class="planet__name">
+      <input type="text" placeholder="Movie Title" class="planet__name">
       <button class="planet__submit">Search</button>
     </div>
 
     <div class="results">
-      <div class="result-item">
-        <p class="result-item__name">filler result</p>
+      <div class="results__top">
+        <div class="result-item">
+          <h2 class="result-item__title">Filler Title</h2>
+          <p class="result-item__category">Horrorororor</p>
+          <div class="result-item__rating">
+            <p class="result-item__rating--number">0.1</p>
+            <i class="fa fa-star result-item__rating--icon" aria-hidden="true"></i>
+          </div>
+        </div>
+        <img src="https://www.placecage.com/200/300" alt="">
+      </div>
+      <div class="results__bottom">
+        <div class="results__bottom--title">
+          <p class="results__bottom--description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
       </div>
     </div>
   </div>
