--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     <div class="results">
       <div class="results__top">
         <div class="result-item">
-          <h2 class="result-item__title">Filler Title</h2>
+          <h1 class="result-item__title">Filler Title</h1>
           <p class="result-item__category">Horrorororor</p>
           <div class="result-item__rating">
             <p class="result-item__rating--number">0.1</p>
@@ -27,8 +27,13 @@
         <img src="https://www.placecage.com/200/300" alt="">
       </div>
       <div class="results__bottom">
-        <div class="results__bottom--title">
-          <p class="results__bottom--description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <div class="results__bottom--summary">
+          <h2 class="results__bottom--summary__title">Summary</h2>
+          <p class="results__bottom--summary__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+        <div class="results__bottom--actors">
+          <h2 class="results__bottom--actors__title">Actors</h2>
+          <p class="results__bottom--actors__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </div>
       </div>
     </div>
